fix: remove scrollbar styles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,34 +5,3 @@
   outline: none;
   caret-color: theme('colors.blue.600');
 }
-
-/* Works on Firefox */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #c0c6cc #ebeef0;
-}
-
-html {
-  scrollbar-width: auto;
-}
-
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar-thumb {
-  background: #c0c6cc;
-  border-radius: 6px;
-}
-
-*::-webkit-scrollbar-track,
-*::-webkit-scrollbar-corner {
-  background: #ebeef0;
-}
-
-*::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-body::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-}
